Minor fix in header overflow

--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -1,21 +1,25 @@
 .header {
   background-color: var(--white-color);
   height: 10vh;
+  width: 100%;
+
   z-index: 1000;
 
   display: flex;
+
   /* 
   top: 0;
   left: 0;
   position: fixed;
   z-index: 1000;
   width: 100%; */
-  position: sticky;
+
+  position: fixed;
   z-index: 100;
   top: 0;
 
-  overflow-x: hidden;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  /* background-color: yellowgreen; */
 }
 
 .box-img-logo {
