--- a/src/components/ui/SectionTitle.module.css
+++ b/src/components/ui/SectionTitle.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin: 4rem 0;
+  margin-top: 13vh;
 }
 
 .section-title h1 {
